# Bigmode-game-jam-2023

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_header.h
include/: image_data.h  my_header.h  renderer.h  visual_data.h
src/: main.cpp  renderer.cpp
